--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,8 +1,8 @@
-<div *ngIf="posts">
+<div *ngIf="posts" class="top-padding">
   <div class="container">
     <div *ngFor="let post of posts">
-      <div class="card">
-        <img class="card-img-top" src="{{ post.thumbnailLink }}" alt="Card image cap">
+      <div class="card card-shadow rounded-corners">
+        <img class="card-img-top rounded-img-corners" src="{{ post.thumbnailLink }}" alt="Card image cap">
         <div class="card-block px-auto py-auto">
           <a routerLink="{{ post.id }}">
             <p class="card-text" style="text-align: center">{{ post.title }}</p>
