--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,14 @@
-<p>Home works</p>
+<div class="send-back">
+    <img src="assets/img/background.png" alt="bg-image">        
+</div>
+
+<div class="container top-padding bottom-btn">
+    <div class="row">
+        <div class="col-sm-6 col-md-6">
+            <button class="btn btn-primary btn-lg btn-block">Hello</button>
+        </div>
+        <div class="col-sm-6 col-md-6">
+            <button class="btn btn-primary btn-lg btn-block">World</button>
+        </div>
+    </div>
+</div>
