--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.css";
 
-body {
-    padding-top: 5rem;
+.top-padding {
+    padding: 5rem;
 }
+
 .starter-template {
     padding: 3rem 1.5rem;
     text-align: center;
