Hover effect : toogle visibility

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="send-back">
-    <img src="assets/img/background.png" alt="bg-image">        
+    <img src="{{baseHref}}assets/img/background.png" alt="bg-image">        
 </div>
 
 <div class="container top-padding bottom-btn">
