--- a/src/app/app-navbar/app-navbar.component.html
+++ b/src/app/app-navbar/app-navbar.component.html
@@ -3,18 +3,17 @@
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" [attr.aria-expanded]="!isCollapsed" aria-controls="navbarsExampleDefault" (click)="isCollapsed = !isCollapsed" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  
+
   <div class="collapse navbar-collapse" [ngbCollapse]="isCollapsed" id="navbarsExampleDefault">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
         <a class="nav-link" (click)="isCollapsed = !isCollapsed" routerLink="home">Home <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item dropdown" ngbDropdown>
-        <a class="nav-link dropdown-toggle" id="dropdown01" aria-haspopup="true" ngbDropdownToggle>Navigate</a>
-        <div class="dropdown-menu" aria-labelledby="dropdown01" ngbDropdownMenu>
-          <a class="dropdown-item" routerLink="about" (click)="isCollapsed = !isCollapsed">About Me</a>
-          <a class="dropdown-item" routerLink="blog" (click)="isCollapsed = !isCollapsed">Blogs</a>
-        </div>
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="about" (click)="isCollapsed = !isCollapsed">About Me</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="blog" (click)="isCollapsed = !isCollapsed">Blogs</a>
       </li>
       <div *ngIf="af.authState | async; let user; else showLogin">
         <li class="nav-item active">
@@ -31,8 +30,8 @@
           <a class="nav-link" routerLink="login" (click)="isCollapsed = !isCollapsed">Login</a>
         </li>
       </ng-template>
-      
+
     </ul>
-    
+
   </div>
 </nav>
