--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.css";
 
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 .top-padding {
   padding: 5rem;
 }
