--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,7 +7,7 @@
   <button (click)="login()">Login with Google</button>
 </ng-template> -->
 
-<div class="container">
+<div class="container top-padding">
   <form (ngSubmit)="login()">
     <div class="form-group">
       <label for="Email">Email</label>
