--- a/src/app/post-detail/post-detail.component.html
+++ b/src/app/post-detail/post-detail.component.html
@@ -1,3 +1,5 @@
-<div Markdown *ngIf="content">
-  {{ content }}
+<div class="container top-padding">
+  <div Markdown *ngIf="content">
+    {{ content }}
+  </div>
 </div>
