chore: minor changes

--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -8,7 +8,7 @@
             <p class="card-text" style="text-align: center">{{ post.title }}</p>
           </a>
           <div Markdown>
-            <p class="card-text" style="text-align: center">{{ post.content }}</p>
+            <p class="card-text" style="text-align: center">{{ post.shortDescription }}</p>
           </div>
         </div>
       </div>
